# utf8-ranges

./: Cargo.toml  README.md
ci/: script.sh
src/: lib.rs
