[package]
name = "utf8-ranges"
version = "1.0.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "DEPRECATED. Use regex-syntax::utf8 submodule instead."
documentation = "https://docs.rs/utf8-ranges"
homepage = "https://github.com/BurntSushi/utf8-ranges"
repository = "https://github.com/BurntSushi/utf8-ranges"
readme = "README.md"
keywords = ["codepoint", "utf8", "automaton", "range"]
license = "Unlicense/MIT"
exclude = ["/ci/*", "/.travis.yml", "/Makefile", "/ctags.rust", "/session.vim"]

[badges]
travis-ci = { repository = "BurntSushi/utf8-ranges" }

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
doc-comment = "0.3"
